--- a/share/nginx.conf
+++ b/share/nginx.conf
@@ -11,7 +11,7 @@ server {
         root   /www/phalcon/public;
         index  index.html index.php;
     		#if ($request_filename !~ (js|css|img|images|robots/.txt|.*\.html|index/.php) ) {
-    		if ($request_filename !~ (js|css|img|images|robots/.txt|index/.php) ) {
+    		if ($request_filename !~ (js|css|img|//images|robots/.txt|index/.php) ) {
         	rewrite ^/(.*)$ /index.php?_url=/$1 last;
         		break;
     		}
@@ -34,8 +34,8 @@ server {
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
-    location ~ \.php$ {
-    #location ~ /index.php/ {
+    #location ~ \.php$ {
+    location ~ /index.php {
         root           /www/phalcon/public;
         fastcgi_pass   127.0.0.1:9000;
         fastcgi_index  index.php;
