--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -4,6 +4,9 @@ username = www
 password = chen
 name     = test
 
+[mongodb]
+dsn = mongodb://neo:chen@127.0.0.1:27017/radio
+
 [application]
 controllersDir = ../app/controllers/
 modelsDir      = ../app/models/
