采用多模块管理

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -5,7 +5,8 @@ password = chen
 name     = test
 
 [mongodb]
-dsn = mongodb://neo:chen@127.0.0.1:27017/radio
+;dsn = mongodb://neo:chen@127.0.0.1:27017/radio
+dsn = mongodb://neo:chen@mongo.example.com:27017
 
 [application]
 controllersDir = ../app/controllers/
@@ -15,6 +16,21 @@ pluginsDir     = ../app/plugins/
 libraryDir     = ../app/library/
 baseUri        = /
 
+[home]
+module = ../app/home
+
+[member]
+module = ../app/member
+
+[outdoor]
+module = ../app/outdoor
+
+[technology]
+module = ../app/technology
+bookurl = http://192.168.6.2/
+
+[radio]
+module = ../app/radio
 ;[metadata]
 ;adapter = "Apc"
 ;suffix = my-suffix
