修正导航栏

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -16,9 +16,9 @@ pluginsDir     = ../app/plugins/
 libraryDir     = ../app/library/
 baseUri        = /
 
-[home]
-module = ../app/home
-
+[photography]
+module = ../app/photography
+viewsDir = '../app/photography/views/'
 [member]
 module = ../app/member
 
