--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -5,8 +5,8 @@ password = chen
 name     = test
 
 [mongodb]
-;dsn = mongodb://neo:chen@127.0.0.1:27017/radio
-dsn = mongodb://neo:chen@mongo.example.com:27017
+dsn = mongodb://neo:chen@127.0.0.1:27017/radio
+;dsn = mongodb://neo:chen@mongo.example.com:27017
 
 [application]
 controllersDir = ../app/controllers/
