--- a/share/nginx.conf
+++ b/share/nginx.conf
@@ -1,17 +1,18 @@
 server {
     listen       80;
     #server_name  localhost;
-    server_name phalcon;
+    server_name phalcon bg7nyt.x64.me;
 
     charset utf-8;
 
     access_log  /var/log/nginx/host.access.log  main;
-
+    error_log  /var/log/nginx/host.error.log;
+    etag on;
     location / {
         root   /www/phalcon/public;
         index  index.html index.php;
     		#if ($request_filename !~ (js|css|img|images|robots/.txt|.*\.html|index/.php) ) {
-    		if ($request_filename !~ (js|css|img|//images|robots/.txt|index/.php) ) {
+    		if ($request_filename !~ (js|css|img|/images|robots/.txt|index/.php) ) {
         	rewrite ^/(.*)$ /index.php?_url=/$1 last;
         		break;
     		}
