json & soap debug tools

--- a/share/nginx.conf
+++ b/share/nginx.conf
@@ -12,7 +12,7 @@ server {
         root   /www/phalcon/public;
         index  index.html index.php;
     		#if ($request_filename !~ (js|css|img|images|robots/.txt|.*\.html|index/.php) ) {
-    		if ($request_filename !~ (js|css|img|/images|robots/.txt|index/.php) ) {
+    		if ($request_filename !~ (js/|css|img|/images|robots/.txt|index/.php) ) {
         	rewrite ^/(.*)$ /index.php?_url=/$1 last;
         		break;
     		}
